--- a/python/BTC_knn.ipynb
+++ b/python/BTC_knn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "import json\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def ret(n, n_1):\n",
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "          timestamp      open      high       low     close        vol  \\\n0     1661904000000  19813.03  19838.84  19811.14  19819.50  582.13461   \n1     1661904180000  19820.97  19876.77  19797.94  19863.03  605.82699   \n2     1661904360000  19865.04  19910.78  19861.16  19904.99  578.33857   \n3     1661904540000  19905.80  19910.18  19864.75  19873.44  607.35949   \n4     1661904720000  19873.44  19892.60  19863.52  19883.66  354.87011   \n...             ...       ...       ...       ...       ...        ...   \n5243  1662847740000  21695.72  21747.90  21675.87  21725.07  914.47974   \n5244  1662847920000  21727.16  21735.53  21690.00  21723.08  710.86427   \n5245  1662848100000  21722.02  21729.23  21663.22  21689.83  844.59582   \n5246  1662848280000  21689.83  21697.99  21653.75  21658.57  746.62426   \n5247  1662848460000  21659.91  21700.00  21657.26  21688.59  612.96300   \n\n         ret_c     ret_o     ret_h     ret_l       ret  ret_s  \n0          NaN       NaN       NaN       NaN  0.000401    1.0  \n1     0.002196  0.000401  0.001912 -0.000666  0.002223    1.0  \n2     0.002112  0.002223  0.001711  0.003193  0.002052    1.0  \n3    -0.001585  0.002052 -0.000030  0.000181 -0.001626   -1.0  \n4     0.000514 -0.001626 -0.000883 -0.000062  0.000466    1.0  \n...        ...       ...       ...       ...       ...    ...  \n5243  0.001353 -0.000084  0.001325  0.000476  0.001449    1.0  \n5244 -0.000092  0.001449 -0.000569  0.000652 -0.000237   -1.0  \n5245 -0.001531 -0.000237 -0.000290 -0.001235 -0.001482   -1.0  \n5246 -0.001441 -0.001482 -0.001438 -0.000437 -0.001379   -1.0  \n5247  0.001386 -0.001379  0.000093  0.000162       NaN    NaN  \n\n[5248 rows x 12 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>timestamp</th>\n      <th>open</th>\n      <th>high</th>\n      <th>low</th>\n      <th>close</th>\n      <th>vol</th>\n      <th>ret_c</th>\n      <th>ret_o</th>\n      <th>ret_h</th>\n      <th>ret_l</th>\n      <th>ret</th>\n      <th>ret_s</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1661904000000</td>\n      <td>19813.03</td>\n      <td>19838.84</td>\n      <td>19811.14</td>\n      <td>19819.50</td>\n      <td>582.13461</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0.000401</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1661904180000</td>\n      <td>19820.97</td>\n      <td>19876.77</td>\n      <td>19797.94</td>\n      <td>19863.03</td>\n      <td>605.82699</td>\n      <td>0.002196</td>\n      <td>0.000401</td>\n      <td>0.001912</td>\n      <td>-0.000666</td>\n      <td>0.002223</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1661904360000</td>\n      <td>19865.04</td>\n      <td>19910.78</td>\n      <td>19861.16</td>\n      <td>19904.99</td>\n      <td>578.33857</td>\n      <td>0.002112</td>\n      <td>0.002223</td>\n      <td>0.001711</td>\n      <td>0.003193</td>\n      <td>0.002052</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1661904540000</td>\n      <td>19905.80</td>\n      <td>19910.18</td>\n      <td>19864.75</td>\n      <td>19873.44</td>\n      <td>607.35949</td>\n      <td>-0.001585</td>\n      <td>0.002052</td>\n      <td>-0.000030</td>\n      <td>0.000181</td>\n      <td>-0.001626</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1661904720000</td>\n      <td>19873.44</td>\n      <td>19892.60</td>\n      <td>19863.52</td>\n      <td>19883.66</td>\n      <td>354.87011</td>\n      <td>0.000514</td>\n      <td>-0.001626</td>\n      <td>-0.000883</td>\n      <td>-0.000062</td>\n      <td>0.000466</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5243</th>\n      <td>1662847740000</td>\n      <td>21695.72</td>\n      <td>21747.90</td>\n      <td>21675.87</td>\n      <td>21725.07</td>\n      <td>914.47974</td>\n      <td>0.001353</td>\n      <td>-0.000084</td>\n      <td>0.001325</td>\n      <td>0.000476</td>\n      <td>0.001449</td>\n      <td>1.0</td>\n    </tr>\n    <tr>\n      <th>5244</th>\n      <td>1662847920000</td>\n      <td>21727.16</td>\n      <td>21735.53</td>\n      <td>21690.00</td>\n      <td>21723.08</td>\n      <td>710.86427</td>\n      <td>-0.000092</td>\n      <td>0.001449</td>\n      <td>-0.000569</td>\n      <td>0.000652</td>\n      <td>-0.000237</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>5245</th>\n      <td>1662848100000</td>\n      <td>21722.02</td>\n      <td>21729.23</td>\n      <td>21663.22</td>\n      <td>21689.83</td>\n      <td>844.59582</td>\n      <td>-0.001531</td>\n      <td>-0.000237</td>\n      <td>-0.000290</td>\n      <td>-0.001235</td>\n      <td>-0.001482</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>5246</th>\n      <td>1662848280000</td>\n      <td>21689.83</td>\n      <td>21697.99</td>\n      <td>21653.75</td>\n      <td>21658.57</td>\n      <td>746.62426</td>\n      <td>-0.001441</td>\n      <td>-0.001482</td>\n      <td>-0.001438</td>\n      <td>-0.000437</td>\n      <td>-0.001379</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>5247</th>\n      <td>1662848460000</td>\n      <td>21659.91</td>\n      <td>21700.00</td>\n      <td>21657.26</td>\n      <td>21688.59</td>\n      <td>612.96300</td>\n      <td>0.001386</td>\n      <td>-0.001379</td>\n      <td>0.000093</td>\n      <td>0.000162</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>5248 rows × 12 columns</p>\n</div>"
      },
-     "execution_count": 49,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "# training\n",
-    "N_CANDLES = 10\n",
+    "N_CANDLES = 25\n",
     "NDIM = N_CANDLES * 4  # NDTR velas * 4 datos por velas\n",
     "# K, NDTR, hit_rate\n"
    ],
@@ -99,13 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 38%|███▊      | 11/29 [1:10:32<1:57:42, 392.38s/it]"
+      "  0%|          | 0/29 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 75 into shape (100,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [7], line 18\u001B[0m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m np\u001B[38;5;241m.\u001B[39marange(K \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m \u001B[38;5;241m+\u001B[39m N_CANDLES, K \u001B[38;5;241m+\u001B[39m \u001B[38;5;241m1\u001B[39m \u001B[38;5;241m+\u001B[39m N_CANDLES \u001B[38;5;241m+\u001B[39m NDTR):\n\u001B[1;32m     14\u001B[0m     small_df \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39miloc[j \u001B[38;5;241m-\u001B[39m N_CANDLES: j]\u001B[38;5;241m.\u001B[39mcopy(deep\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)[\n\u001B[1;32m     15\u001B[0m         [\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mret_c\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mret_h\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mret_l\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mret_s\u001B[39m\u001B[38;5;124m'\u001B[39m]]\u001B[38;5;241m.\u001B[39mreset_index(\n\u001B[1;32m     16\u001B[0m         drop\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m---> 18\u001B[0m     x \u001B[38;5;241m=\u001B[39m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43marray\u001B[49m\u001B[43m(\u001B[49m\u001B[43msmall_df\u001B[49m\u001B[43m[\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mret_c\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mret_h\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mret_l\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m]\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalues\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mreshape\u001B[49m\u001B[43m(\u001B[49m\u001B[43mNDIM\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     19\u001B[0m     y \u001B[38;5;241m=\u001B[39m df\u001B[38;5;241m.\u001B[39miloc[j][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mret_s\u001B[39m\u001B[38;5;124m'\u001B[39m]\n\u001B[1;32m     20\u001B[0m     xs\u001B[38;5;241m.\u001B[39mappend(x)\n",
+      "\u001B[0;31mValueError\u001B[0m: cannot reshape array of size 75 into shape (100,)"
      ]
     }
    ],
@@ -114,7 +125,7 @@
     "# K, NDTR, mean(ret)\n",
     "rets_K = []\n",
     "for K in tqdm(np.arange(5, 150, 5)):\n",
-    "    for NDTR in (np.arange(150, 4000, 50)):\n",
+    "    for NDTR in (np.arange(1000, 2000, 100)):\n",
     "\n",
     "        knn = KNeighborsClassifier(n_neighbors=K, weights=\"distance\")\n",
     "\n",
@@ -124,19 +135,19 @@
     "        y_predicted = []\n",
     "        for j in np.arange(K + 1 + N_CANDLES, K + 1 + N_CANDLES + NDTR):\n",
     "            small_df = df.iloc[j - N_CANDLES: j].copy(deep=True)[\n",
-    "                ['ret_o', 'ret_c', 'ret_h', 'ret_l', 'ret_s']].reset_index(\n",
+    "                ['ret_c', 'ret_h', 'ret_l', 'ret_s']].reset_index(\n",
     "                drop=True)\n",
     "\n",
-    "            x = np.array(small_df[['ret_c', 'ret_h', 'ret_l', 'ret_o']].values).reshape(NDIM)\n",
+    "            x = np.array(small_df[['ret_c', 'ret_h', 'ret_l']].values).reshape(NDIM)\n",
     "            y = df.iloc[j]['ret_s']\n",
     "            xs.append(x)\n",
     "            y_train.append(y)\n",
     "\n",
     "        for j in np.arange(K + 1 + NDTR + N_CANDLES, K + 1 + NDTR + N_CANDLES + PREDICTIONS_TESTING):\n",
     "            small_df = df.iloc[j - N_CANDLES: j].copy(deep=True)[\n",
-    "                ['ret_o', 'ret_c', 'ret_h', 'ret_l', 'ret_s']].reset_index(\n",
+    "                ['ret_c', 'ret_h', 'ret_l', 'ret_s']].reset_index(\n",
     "                drop=True)\n",
-    "            x = np.array(small_df[['ret_c', 'ret_h', 'ret_l', 'ret_o']].values).reshape(NDIM)\n",
+    "            x = np.array(small_df[['ret_c', 'ret_h', 'ret_l']].values).reshape(NDIM)\n",
     "            xs.append(x)\n",
     "            y_test.append(df.iloc[j]['ret_s'])\n",
     "\n",
@@ -154,7 +165,7 @@
     "        for j in np.arange(K + 1 + NDTR + N_CANDLES, K + 1 + NDTR + N_CANDLES + PREDICTIONS_TESTING):\n",
     "            small_df = df.iloc[j - N_CANDLES: j]\n",
     "\n",
-    "            x_test = [np.array(small_df[['ret_c', 'ret_h', 'ret_l', 'ret_o']].values).reshape(NDIM)]\n",
+    "            x_test = [np.array(small_df[['ret_c', 'ret_h', 'ret_l']].values).reshape(NDIM)]\n",
     "            y_test = df.iloc[j - 1]['ret_s']\n",
     "            # st_x= RobustScaler()\n",
     "            # x_test= st_x.fit_transform(x_test)\n",
@@ -172,28 +183,18 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6085714285714285\n",
-      "0.0034869021597492356\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "hit_rates_K = pd.DataFrame(hit_rates_K, columns=[\"K\", \"NDTR\", \"hit_rate\"])\n",
     "rets_K = pd.DataFrame(rets_K, columns=[\"K\", \"NDTR\", \"ret\"])\n",
-    "print(hit_rates_K['hit_rate'].max())\n",
+    "print(hit_rates_K[hit_rates_K['hit_rate'] == hit_rates_K['hit_rate'].max()])\n",
     "print(rets_K['ret'].max())"
    ],
    "metadata": {
@@ -205,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "hit_rates_K.to_csv(\"knn/first_run_knn_hr_700testing_10candles.csv\")\n",
-    "rets_K.to_csv(\"knn/first_run_knn_ret_700testing_10candles.csv\")"
+    "hit_rates_K.to_csv(\"knn/first_run_knn_hr_700testing_25candles_chl.csv\")\n",
+    "rets_K.to_csv(\"knn/first_run_knn_ret_700testing_25candles_chl.csv\")"
    ],
    "metadata": {
     "collapsed": false,
